feat: GET /backoffice/interactions endpoint
